--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container projects fadeIn">
+    <div class="container projects">
     <section class="web-design-projects">
         <article class="article-1">
         <div class="row align-items-center justify-content-between">
