--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     <div class="container projects">
     <section class="web-design-projects">
         <article class="article-1">
-        <div class="row align-items-center justify-content-between">
+        <div class="row gy-5 align-items-center justify-content-between">
             <div class="col-md-5">
                 <h1>WEB DEVELOPMENT & DESIGN</h1>
                 <p><q>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.</q>
@@ -170,7 +170,7 @@
     <!--Section & Articles-->
     <section class="ux-projects">
         <article class="article-2">
-        <div class="row align-items-center justify-content-between">
+        <div class="row gy-5 align-items-center justify-content-between">
             <div class="col-md-3 scroll-reveal box tag">        
                 <a href="munch.html">
                     <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -243,7 +243,7 @@
     <!--Section & Articles-->
     <section class="database-projects">
         <article class="article-3">
-        <div class="row align-items-center justify-content-between">
+        <div class="row gy-5 align-items-center justify-content-between">
             <div class="col-md-4">    
                 <h1>DATABASE & PROGRAMMING</h1>
                 <p><q>Design adds value faster than it adds costs.</q> -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
@@ -332,8 +332,8 @@
     <!--Section & Articles-->
     <section class="communication-skills">
         <article class="article-4">
-        <div class="row align-items-center justify-content-between">
-            <div class="col-md-3 scroll-reveal box tag">
+        <div class="row gy-5 align-items-center justify-content-between">
+            <div class="col-md-3 text-center scroll-reveal box tag">
                 <a href="film.html">
                     <svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 170 130" enable-background="new 0 0 170 130" xml:space="preserve">
@@ -349,7 +349,7 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-3 scroll-reveal box tag">        
+            <div class="col-md-3 text-center scroll-reveal box tag">        
                 <a href="typography.html">
                     <svg version="1.1" id="Layer_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 200 158.64" enable-background="new 0 0 200 158.64" xml:space="preserve">
@@ -396,7 +396,7 @@
     <!--Section & Articles-->
     <section class="writing-skills">
         <article class="article-5">
-        <div class="row align-items-center justify-content-between">
+        <div class="row gy-5 align-items-center justify-content-between">
             <div class="col-md-5">    
                 <h1>WRITING</h1>
                 <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
