--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                 </p>
                 <p><q>Design is the intermediary between information and understanding.</q> -- Hans Hoffman, artist and teacher</p>
             </div>
-            <div class="col-md-2 scroll-reveal box tag">
+            <div class="col-md-2 text-center scroll-reveal box tag">
                 <a href="web-buffalo-river.html">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 136.34 186.13" enable-background="new 0 0 136.34 186.13" xml:space="preserve">
@@ -122,7 +122,7 @@
                </svg>
               </a>
             </div>
-            <div class="col-md-3 scroll-reveal box tag">
+            <div class="col-md-3 text-center scroll-reveal box tag">
                 <a href="web-university-district.html">
                     <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 181.8 136.3" style="enable-background:new 0 0 181.8 136.3;" xml:space="preserve">
@@ -171,7 +171,7 @@
     <section class="ux-projects">
         <article class="article-2">
         <div class="row gy-5 align-items-center justify-content-between">
-            <div class="col-md-3 scroll-reveal box tag">        
+            <div class="col-md-3 text-center scroll-reveal box tag">        
                 <a href="munch.html">
                     <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 247 78.7" style="enable-background:new 0 0 247 78.7;" xml:space="preserve">
@@ -188,7 +188,7 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-2 scroll-reveal box tag">        
+            <div class="col-md-2 text-center scroll-reveal box tag">        
                 <a href="ux-campus-police.html">
                     <svg version="1.1" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 151.82 162" enable-background="new 0 0 151.82 162" xml:space="preserve">
@@ -248,7 +248,7 @@
                 <h1>DATABASE & PROGRAMMING</h1>
                 <p><q>Design adds value faster than it adds costs.</q> -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
             </div>
-            <div class="col-md-3  scroll-reveal box tag">        
+            <div class="col-md-3 text-center scroll-reveal box tag">        
                 <a href="database.html">
                     <svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
@@ -283,7 +283,7 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-4  scroll-reveal box tag">
+            <div class="col-md-4 text-center scroll-reveal box tag">
                 <a href="programming.html">
                     <svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 314.16 70.47" enable-background="new 0 0 314.16 70.47" xml:space="preserve">
@@ -333,7 +333,7 @@
     <section class="communication-skills">
         <article class="article-4">
         <div class="row gy-5 align-items-center justify-content-between">
-            <div class="col-md-3 text-center scroll-reveal box tag">
+            <div class="col-md-2 text-center scroll-reveal box tag">
                 <a href="film.html">
                     <svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 170 130" enable-background="new 0 0 170 130" xml:space="preserve">
@@ -401,7 +401,7 @@
                 <h1>WRITING</h1>
                 <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
                 <p><q>Every great design begins with an even better story.</q> -- Lorinda Mamo, designer and creative director</p></div>
-            <div class="col-md scroll-reveal box tag">        
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="technical-doc.html">
                     <svg version="1.1" id="Layer_9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 400 130.77" enable-background="new 0 0 400 130.77" xml:space="preserve">
@@ -459,7 +459,7 @@
                </svg>
                </a>
             </div>
-            <div class="col-md scroll-reveal box tag">        
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="reflection.html">
                     <svg version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
