--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     <div class="container projects">
     <section class="web-design-projects">
         <article class="article-1">
-        <div class="row gy-5 align-items-center justify-content-between">
+        <div class="row gy-5 gx-5 align-items-center justify-content-between">
             <div class="col-md-5">
                 <h1>WEB DEVELOPMENT & DESIGN</h1>
                 <p><q>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.</q>
@@ -45,9 +45,9 @@
                 </p>
                 <p><q>Design is the intermediary between information and understanding.</q> -- Hans Hoffman, artist and teacher</p>
             </div>
-            <div class="col-md-2 text-center scroll-reveal box tag">
+            <div class="col-md text-center scroll-reveal box tag">
                 <a href="web-buffalo-river.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="buffalo-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 136.34 186.13" enable-background="new 0 0 136.34 186.13" xml:space="preserve">
                <g>
                    <path d="M22.54,5.85c15.63,0,25.45,2,33.45,9.45c6.54,6.18,9.63,14,9.63,24c0,4.73-0.73,9.63-3.64,14.36
@@ -122,9 +122,9 @@
                </svg>
               </a>
             </div>
-            <div class="col-md-3 text-center scroll-reveal box tag">
+            <div class="col-md text-center scroll-reveal box tag">
                 <a href="web-university-district.html">
-                    <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="ud-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 181.8 136.3" style="enable-background:new 0 0 181.8 136.3;" xml:space="preserve">
                <g>
                    <path d="M103.3,104c2,0,3.7,0.2,5.3,1.4c1.7,1.3,2.7,3.4,2.7,5.8s-1,4.4-2.9,5.8c-1.7,1.2-3.2,1.4-5.2,1.4h-2.9V104
@@ -170,10 +170,10 @@
     <!--Section & Articles-->
     <section class="ux-projects">
         <article class="article-2">
-        <div class="row gy-5 align-items-center justify-content-between">
-            <div class="col-md-3 text-center scroll-reveal box tag">        
+        <div class="row gy-5 gx-5 align-items-center justify-content-between">
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="munch.html">
-                    <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="munch-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 247 78.7" style="enable-background:new 0 0 247 78.7;" xml:space="preserve">
                <g>
                    <path d="M3.7,61.8l9.8-50.2l16.2,36.3l16.4-36.3L55,61.8h-7.3l-4.8-28.1L29.4,64L15.9,33.6L11,61.8H3.7z"/>
@@ -188,9 +188,9 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-2 text-center scroll-reveal box tag">        
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="ux-campus-police.html">
-                    <svg version="1.1" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="safety-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 151.82 162" enable-background="new 0 0 151.82 162" xml:space="preserve">
                <g>
                    <path d="M100.61,46.16c-0.56-3.56-1.8-7.04-4.42-10.61c-3.71-4.74-8.14-7.36-14.42-8.81c-13.46-3.09-22.24,3.34-24.39,12.67
@@ -243,14 +243,14 @@
     <!--Section & Articles-->
     <section class="database-projects">
         <article class="article-3">
-        <div class="row gy-5 align-items-center justify-content-between">
+        <div class="row gy-5 gx-5 align-items-center justify-content-between">
             <div class="col-md-4">    
                 <h1>DATABASE & PROGRAMMING</h1>
                 <p><q>Design adds value faster than it adds costs.</q> -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
             </div>
-            <div class="col-md-3 text-center scroll-reveal box tag">        
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="database.html">
-                    <svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="database-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
                <g>
                    <path d="M9.9,10.06c5.34,0,9.99,0.57,14.24,3.73c4.65,3.5,7.35,9.07,7.35,15.45c0,6.37-2.64,11.89-7.69,15.45
@@ -283,9 +283,9 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-4 text-center scroll-reveal box tag">
+            <div class="col-md text-center scroll-reveal box tag">
                 <a href="programming.html">
-                    <svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="program-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 314.16 70.47" enable-background="new 0 0 314.16 70.47" xml:space="preserve">
                <g>
                    <path d="M6.25,27.79c1.64,0,3.92,0.16,5.84,1.44c2.24,1.48,3.32,4.04,3.32,6.48c0,1.56-0.4,3.96-2.6,5.84
@@ -332,10 +332,10 @@
     <!--Section & Articles-->
     <section class="communication-skills">
         <article class="article-4">
-        <div class="row gy-5 align-items-center justify-content-between">
-            <div class="col-md-2 text-center scroll-reveal box tag">
+        <div class="row gy-5 gx-5 align-items-center justify-content-between">
+            <div class="col-md text-center scroll-reveal box tag">
                 <a href="film.html">
-                    <svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="film-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 170 130" enable-background="new 0 0 170 130" xml:space="preserve">
                <g>
                    <path d="M29.03,69.33H10.51V87.5h17.87v6.46H10.51v30.43H4.56V62.88h24.47C29.03,62.88,29.03,69.33,29.03,69.33z"/>
@@ -349,9 +349,9 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-3 text-center scroll-reveal box tag">        
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="typography.html">
-                    <svg version="1.1" id="Layer_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="type-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 200 158.64" enable-background="new 0 0 200 158.64" xml:space="preserve">
                <g>
                    <path d="M59.99,121.3c3.35,0,6.15,0.4,8.4,2.35c2.45,2.1,3.05,5.05,3.05,7.15c0,4.7-2.95,9.35-10.55,9.35h-3.25v14.51h-3.7V121.3
@@ -396,14 +396,14 @@
     <!--Section & Articles-->
     <section class="writing-skills">
         <article class="article-5">
-        <div class="row gy-5 align-items-center justify-content-between">
+        <div class="row gy-5 gx-5 align-items-center justify-content-between">
             <div class="col-md-5">    
                 <h1>WRITING</h1>
                 <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
                 <p><q>Every great design begins with an even better story.</q> -- Lorinda Mamo, designer and creative director</p></div>
             <div class="col-md text-center scroll-reveal box tag">        
                 <a href="technical-doc.html">
-                    <svg version="1.1" id="Layer_9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="doc-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 400 130.77" enable-background="new 0 0 400 130.77" xml:space="preserve">
                <g>
                    <path d="M6.52,35.18v13.24H2.6V35.18H0.96v-3.6H2.6v-6.16h3.92v6.16h3v3.6H6.52z"/>
@@ -461,7 +461,7 @@
             </div>
             <div class="col-md text-center scroll-reveal box tag">        
                 <a href="reflection.html">
-                    <svg version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="reflect-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
                <g>
                    <path d="M66.94,69.51v24.43H61.9V69.51h-2.8v-4.62h2.8V52.22c0-2.66,0.21-6.02,2.8-8.19c1.4-1.19,3.5-1.89,5.81-1.89
