style-mobile-view

--- a/film.html
+++ b/film.html
@@ -41,7 +41,7 @@
       <section class="info">
         <article class="article-1">
         <div class="row justify-content-between">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <h1>MEDIA PRODUCTION</h1>
                 <p>Ok, so I still may not be great at holding a camera, <b>but</b> I've gotten pretty good at developing a narrative. Here
                   are a few short films that I scripted, storyboarded, edited, and filmed (with some help on the filming part) as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
@@ -49,7 +49,7 @@
                 <p><a href="#cause"><em>'Cause That's What I Do</em></a> -- a feature film that tells a fictional story.</p>
                 <p><a href="#mischief"><em>Can't Escape The Mischief</em></a> -- a feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 d-none d-lg-block">
                 <img src="assets/images/film.png" class="img-fluid" alt="three faded film strips arranged horizontally">
             </div>
         </div>
