--- a/programming.html
+++ b/programming.html
@@ -34,14 +34,14 @@
     <div class="container programming">
         
         <div class="row feature fade-in-image">
-            <div class="col-12">
+            <div class="col">
                 <img src="assets/images/mars-explorer-2.webp" alt="screen image of mars rover program">
             </div>
         </div>
         <section class="info">
         <article class="article-1">
-        <div class="row gx-5 justify-content-between">
-            <div class="col-md-5">
+        <div class="row gy-5 gx-5 align-items-start justify-content-between">
+            <div class="col-lg-5">
                 <h1>PROGRAMMING PROJECTS</h1>
                     <p>How can I call myself a web developer if I don't know basic JavaScript and JSON? Well, thank goodness I do! 
                         Here are a couple of programming projects I developed while attending ITEC 3650: Guided Applications In IT.</p>
@@ -51,7 +51,7 @@
                     <p>To the right, is an application of JSON to retreive & convert currency values from Polygon.io.</p>
                     <p><a href="currency-value-history/index.html">Test the Currency Value application here</a>.</p>
             </div>
-            <div class="col-md-5 scroll-reveal box tag">
+            <div class="col-lg-5 scroll-reveal box tag">
                 <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
             </div>
         </div>
