--- a/reflection.html
+++ b/reflection.html
@@ -35,15 +35,14 @@
         </div>
     </header>
       <div class="container reflection">
-        <video class="feature fade-in-image" controls autoplay loop>
+        <video class="feature fade-in-image" controls muted autoplay loop>
             <source src="assets/video/flowering-1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <!--Adobe after effects full width-->
            <section class="info">
-            <article class="article-1">
-             <div class="row  gx-5 justify-content-between">
-                <div class="col-sm col-lg-7">
+            <article class="capstone">
+             <div class="row gy-5 gx-5 align-items-start justify-content-between">
+                <div class="col-lg-7">
                     <h1>CAPSTONE PROJECT</h1>
                     <p>I've learned and discovered many things while completing UALR's web development program. I can't write about it all,
                         but at least I can share a little bit of what I've discovered while developing my Capstone Project - the University District's website.</p>
@@ -57,8 +56,8 @@
                     <dd><em>Struction & Design:</em> my role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
                         My team and I spent a month completing our design process. First, we met with our client to identify their needs and 
                         expectations. Next, we considered the different types of users who would visit the website and how they may interact with 
-                        it. Then, we developed a structure and flow list to visualize how the user may navigate through the website. After we 
-                        determined the site structure,  I developed a low-fidelity prototype that we presented to our clients. Once they’ve given 
+                        it. Then, we developed a structure and flow list to visualize how the user may navigate through the website.</p>
+                        <p>After we determined the site structure,  I developed a low-fidelity prototype that we presented to our clients. Once they’ve given 
                         us their feedback, I developed the website page layouts via wordpress to closely resemble the prototype. After the pages 
                         were created, my teammates collected the content and entered it within the site. We researched and applied 
                         additional plugins for extra functionality, like the news carousel on the landing page. We also reviewed the site for 
@@ -80,7 +79,7 @@
                 <p>...here are some of the treasures I've discovered during my capstone project...</p>
             </div>
             <div class="reflect">
-            <div class="row scroll-reveal box tag">
+            <div class="row gy-5 gx-5 align-items-start scroll-reveal box tag">
                 <div class="col-md-8">
                     <dl class="msg">
                         <dt>My most challenging moments and what made them so...</dt>
