--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -39,8 +39,8 @@
       </div>
     <section class="info">
       <article class="article-1">
-      <div class="row justify-content-between">
-        <div class="col-md-6">
+      <div class="row gy-5 gx-5 align-items-start justify-content-between">
+        <div class="col-lg-6">
           <h1>BUFFALO RIVER ADVENTURERS 2022</h1>
           <p>A static website collaboration for a fictional organization, Buffalo River Adventurers. Designed to inspire outdoor enthusiasts to explore the 
               Buffalo National River. A project of IFSC 3650: Guided Applications in IT.</p>
@@ -54,8 +54,8 @@
             <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
         </div>
-        <div class="col-md-3 scroll-reveal box tag">
-          <img src="assets/images/mobile-buffalo.gif" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
+        <div class="col-lg scroll-reveal box tag">
+          <img src="assets/images/mobile-buffalo.gif" class="mobile" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
         </div>
       </div>
     </article>
