--- a/web-university-district.html
+++ b/web-university-district.html
@@ -39,7 +39,7 @@
     </div>
     <section class="info">
     <article class="article-1">
-    <div class="row justify-content-between">
+    <div class="row gy-5 gx-5 align-items-start justify-content-between">
       <div class="col-md-7">
         <h1>UNIVERSITY DISTRICT 2022</h1>
         <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
@@ -53,8 +53,8 @@
             <img src="assets/images/ud-heart.webp" alt="hand holding a plastic heart">
           </div>
       </div>
-      <div class="col-md-3 scroll-reveal box tag">
-        <img src="assets/images/mobile-ud.png" alt="an illustration of the university district website on a mobile phone">
+      <div class="col-lg scroll-reveal box tag">
+        <img src="assets/images/mobile-ud.png" class="mobile" alt="an illustration of the university district website on a mobile phone">
       </div>
     </div>
     </article>
