--- a/database.html
+++ b/database.html
@@ -41,8 +41,8 @@
   </div>
     <section class="info">
       <article class="article-1">
-    <div class="row gx-5 justify-content-between">
-      <div class="col-md-5">
+    <div class="row gy-5 gx-5 align-items-start justify-content-between">
+      <div class="col-lg-5">
         <h1>GETTING TO KNOW GOOGLE SHEETS</h1>
         <P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace. I'm great with
           Microsoft excel, but there's no harm in getting comfy using Google Sheets, too. So here are a 
@@ -51,18 +51,18 @@
         <p><a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0">
           Check it out on Google Sheets</a>.</p>
       </div>
-      <div class="col-md scroll-reveal box tag">
+      <div class="col-lg scroll-reveal box tag">
         <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="a google sheet database assessment">
       </div>
     </div>
     </article>
 
     <article class="article-2">
-    <div class="row gx-5 justify-content-between">
-      <div class="col-md scroll-reveal box tag">
+    <div class="row gy-5 gx-5 align-items-start justify-content-between">
+      <div class="col-lg scroll-reveal box tag">
         <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="a google sheet inventory database">
       </div>
-      <div class="col-md-5">
+      <div class="col-lg-5">
         <h1>INVENTORY DATABASE</h1>
         <p>Another database exercise of jewelry inventory.</p>
         <p><a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0">
