style-mobile-view

--- a/typography.html
+++ b/typography.html
@@ -33,7 +33,7 @@
     </header>
     <div class="container typography">
         <div class="row feature fade-in-image">
-            <div class="col-12">
+            <div class="col">
                 <a href="assets/images/menu-redesign.webp">
                     <img src="assets/images/menu-redesign.webp" alt="a menu of Sonny William's Steakhouse redesigned a creative way using typography principles">
                 </a>
@@ -42,21 +42,21 @@
 
         <section class="info">
             <article class="article-1">
-            <div class="row justify-content-between">
+            <div class="row gy-5 gx-5 align-items-start justify-content-between">
                 <div class="col-md-5">
                     <h1>TYPOGRAPHY 2021</h1>
                     <p>Design <em>is</em> communication. So here are a few art pieces that I've created while attending ARST 3341: Typography.
                         These pieces are an exploration of the art and practice of typography as a tool for visual communication.
                         You may click on each image for a larger view.</p>
                 </div>
-                <div class="col-8 col-md-5 scroll-reveal box tag">
+                <div class="col-md-5 scroll-reveal box tag">
                     <a href="assets/images/info-type-1.1.webp"><img src="assets/images/info-type-1.1.webp" alt="information type-1 creatively rearranged using typography principles"></a>    
                 </div>
             </div>
             </article>
         
             <article class="article-2">
-            <div class="row">
+            <div class="row gy-5 gx-5 align-items-start justify-content-between">
                 <div class="col-md scroll-reveal box tag">
                     <a href="assets/images/info-type-2.1.webp"><img src="assets/images/info-type-2.1.webp" alt="information type-2 creatively rearranged using typography principles">
                     </a>
@@ -69,26 +69,26 @@
             </article>
        
             <article class="article-3">
-            <div class="row justify-content-between">
+            <div class="row gy-5 gx-5 align-items-start justify-content-between">
                 <div class="col-md-5">
                     <h1>GRAPHIC DESIGN 2021</h1>
                     <p>To the right and below are editorial designs of fictional organizations that communicate a controversial issue of my choosing. 
                         Completed as part of the course, ARST 3340: Intro To Graphic Design.
                     </p>
                 </div>
-                <div class="col-8 col-md-5 scroll-reveal box tag">
+                <div class="col-md-5 scroll-reveal box tag">
                     <a href="assets/images/poster.webp"><img src="assets/images/poster.webp" alt="poster raising awareness about a particular social issue, the Stand Your Ground law."> 
                     </a>
                 </div>
             </div>
             </article>
             <article class="article-4">
-            <div class="row justify-content-between align-items-center">
+            <div class="row gy-5 gx-5 align-items-center justify-content-between">
                 <div class="col-md-7 scroll-reveal box tag">
                     <a href="assets/images/publication.webp"><img src="assets/images/publication.webp" alt="a publication article for a fictional magazine called Road">
                     </a>
                 </div>
-                <div class="col-8 col-md-4 scroll-reveal box tag">
+                <div class="col-md-4 scroll-reveal box tag">
                     <a href="assets/images/magazine-cover.webp"><img src="assets/images/magazine-cover.webp" alt="cover design for a fictional magazine called Road">
                     </a>
                 </div>
