--- a/munch.html
+++ b/munch.html
@@ -35,23 +35,25 @@
     </header>
     <div class="container munch">
         <div class="row feature fade-in-image">
-            <div class="col-md">
-                <a href="">image</a>
+            <div class="col">
+              <img src="assets/images/munch-header.png" alt="munch brand">
             </div>
         </div>
         <section class="info">
-        <div class="row justify-content-between">
-            <div class="col-6 col-md-4">
+        <article class="article-1">
+        <div class="row gy-5 gx-5 align-items-start justify-content-between">
+            <div class="col-lg-5">
                 <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
                 <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
-                   students & faculty. Scroll down to review my development process.</p>
-                <a href="">Interact with the prototype.</a>
-                <a href="">Explore the design process.</a>
+                   students & faculty. Chech out my PDF document to review my development process.</p>
+                <p><a href="https://xd.adobe.com/view/3385958c-6841-485d-a792-6e6acfc1d184-66d6/" target="blank">Interact with the prototype.</a></p>
+                <p><a href="">Explore the design process.</a></p>
             </div>
-            <div class="col-md-8">
-                <p>coming soon</p>
+            <div class="col-lg-5 scroll-reveal box tag">
+              <img src="assets/images/mobile-munch.JPG" class="mobile" >
             </div>
         </div>
+        </article>
         </section>
 <!--END OF ARTICLES-->
 </div>
