munch & mobile-view

--- a/munch.html
+++ b/munch.html
@@ -42,16 +42,23 @@
         <section class="info">
         <article class="article-1">
         <div class="row gy-5 gx-5 align-items-start justify-content-between">
-            <div class="col-lg-5">
-                <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
-                <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
-                   students & faculty. Chech out my PDF document to review my development process.</p>
-                <p><a href="https://xd.adobe.com/view/3385958c-6841-485d-a792-6e6acfc1d184-66d6/" target="blank">Interact with the prototype.</a></p>
-                <p><a href="">Explore the design process.</a></p>
+            <div class="col-lg-6">
+                <h1>MUNCH 2022</h1>
+                <p>A prototype design of a food ordering app for a college campus that allows the various restaurants on campus to deliver directly to 
+                   students & faculty. A project of CPSC 4379: Principles of UI & UX. Check out my design process by watching my presentation or just scan through my PDF report.</p>
+                   <p><a href="https://xd.adobe.com/view/3385958c-6841-485d-a792-6e6acfc1d184-66d6/" target="blank">Interact with the prototype</a>.</p>
+                   <p><a href="assets/documents/munch-hifi.pdf">High Fidelity Design Image</a>.</p>
+                   <p>Explore the design process: <a href="">Video Presentation</a> or <a href="assets/documents/munch-report.pdf">PDF</a>.</p>
+                   <img src="assets/images/instructor-feedback-munch.JPG" alt="instructor's feedback" class="d-none d-lg-block feedback scroll-reveal box tag">
+                  </div>
+            <div class="col-lg scroll-reveal box tag">
+              <img src="assets/images/mobile-munch.JPG" class="mobile" alt="mobile design of the app's order page" >
             </div>
-            <div class="col-lg-5 scroll-reveal box tag">
-              <img src="assets/images/mobile-munch.JPG" class="mobile" >
-            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            
+          </div>
         </div>
         </article>
         </section>
