--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -54,7 +54,7 @@
             <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
         </div>
-        <div class="col-lg scroll-reveal box tag">
+        <div class="d-none d-lg-block col-lg scroll-reveal box tag">
           <img src="assets/images/mobile-buffalo.gif" class="mobile" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
         </div>
       </div>
