--- a/web-university-district.html
+++ b/web-university-district.html
@@ -40,20 +40,20 @@
     <section class="info">
     <article class="article-1">
     <div class="row gy-5 gx-5 align-items-start justify-content-between">
-      <div class="col-md-7">
+      <div class="col-lg-6">
         <h1>UNIVERSITY DISTRICT 2022</h1>
         <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
-        encourage development, and to promote the business and services within the area.</p>
+        encourage development, and to promote the business and services within the area. A project of ITEC 4610: Project Development and Portfolio.</p>
           <dl>
             <dt>My Role</dt>
             <dd>As the UX developer, I was responsible for designing the website (and prototype) using UI/UX principles and for developing the wordpress layouts.</dd>
           </dl>
           <p><a href="https://web-projects.net/ud/" target="blank">Visit the site</a>.</p>
           <div class="wrap scroll-reveal box tag">
-            <img src="assets/images/ud-heart.webp" alt="hand holding a plastic heart">
+            <img src="assets/images/ud-heart.jpg" alt="hand holding a plastic heart">
           </div>
       </div>
-      <div class="col-lg scroll-reveal box tag">
+      <div class="d-none d-lg-block col-lg scroll-reveal box tag">
         <img src="assets/images/mobile-ud.png" class="mobile" alt="an illustration of the university district website on a mobile phone">
       </div>
     </div>
