--- a/munch.html
+++ b/munch.html
@@ -45,10 +45,10 @@
             <div class="col-lg-6">
                 <h1>MUNCH 2022</h1>
                 <p>A prototype design of a food ordering app for a college campus that allows the various restaurants on campus to deliver directly to 
-                   students & faculty. A project of CPSC 4379: Principles of UI & UX. Check out my design process by watching my presentation or just scan through my PDF report.</p>
+                   students & faculty. A project of CPSC 4379: Principles of UI & UX.</p>
                    <p><a href="https://xd.adobe.com/view/3385958c-6841-485d-a792-6e6acfc1d184-66d6/" target="blank">Interact with the prototype</a>.</p>
                    <p><a href="assets/documents/munch-hifi.pdf">High Fidelity Design Image</a>.</p>
-                   <p>Explore the design process: <a href="">Video Presentation</a> or <a href="assets/documents/munch-report.pdf">PDF</a>.</p>
+                   <p>Explore my design process by <a href="assets/documents/munch-report.pdf">PDF</a> or watch the <a href="">video</a> of my design presentation to my class, CPSC 4379.</p>
                    <img src="assets/images/instructor-feedback-munch.JPG" alt="instructor's feedback" class="d-none d-lg-block feedback scroll-reveal box tag">
                   </div>
             <div class="col-lg scroll-reveal box tag">
