--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>JAW's Portfolio</title>
@@ -34,20 +34,23 @@
     <main class="flex-shrink-0">
     <div class="container campus-safety">
       <div class="row feature fade-in-image">
-        <div class="col-md"><a href="">Image</a></div>      
+        <img src="assets/images/safety.webp" alt="campus safety page of UALR website">
       </div>
     <section class="info">
-      <div class="row">
-        <div class="col-md">
+      <article class="article-1">
+      <div class="row gy-5 gx-5 align-items-start justify-content-between">
+        <div class="col-lg-6">
           <h1>CPSC 4379 CAMPUS SAFTEY APP 2022</h1>
           <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus.</p>
-          <a href="">Interact with the prototype.</a>
-          <a href="">Explore the design process</a>
+          <p><a href="">Interact with the prototype</a>.</p>
+          <p>Explore the design process by <a href="">PDF</a>.</p>
+          <img>
         </div>
-        <div class="col-md-8">
-          <p>coming soon</p>
+        <div class="col-lg scroll-reveal box tag">
+          <img src="assets/images/safety-sm.webp" class="mobile" alt="mobile design of the app's form page" >
+        </div>
       </div>
-      </div>
+      </article>
     </section>
 <!--ARTICLES-->
 
