--- a/munch.html
+++ b/munch.html
@@ -49,7 +49,7 @@
                    <p><a href="https://xd.adobe.com/view/3385958c-6841-485d-a792-6e6acfc1d184-66d6/">Interact with the prototype</a>.</p>
                    <p><a href="assets/documents/munch-hifi.pdf">High Fidelity Design Image</a>.</p>
                    <p>Explore my design process by <a href="assets/documents/munch-report.pdf">PDF</a> or watch the <a href="https://youtu.be/0Ckw_fwEZjg">video</a> of my design presentation to my class, CPSC 4379.</p>
-                   <img src="assets/images/instructor-feedback-munch.JPG" alt="instructor's feedback" class="d-none d-lg-block feedback scroll-reveal box tag">
+                   <a href="assets/images/instructor-feedback-munch.JPG"><img src="assets/images/instructor-feedback-munch.JPG" alt="instructor's feedback" class="d-none d-lg-block feedback scroll-reveal box tag"></a>
                   </div>
             <div class="col-lg scroll-reveal box tag">
               <img src="assets/images/mobile-munch.JPG" class="mobile" alt="mobile design of the app's order page" >
