--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -40,11 +40,11 @@
       <article class="article-1">
       <div class="row gy-5 gx-5 align-items-start justify-content-between">
         <div class="col-lg-6">
-          <h1>CPSC 4379 CAMPUS SAFTEY APP 2022</h1>
-          <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus.</p>
-          <p><a href="">Interact with the prototype</a>.</p>
-          <p>Explore the design process by <a href="">PDF</a>.</p>
-          <img>
+          <h1>CAMPUS SAFTEY APP 2022</h1>
+          <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus. A group collaborative project of CPSC 4379: Principles of UI & UX.</p>
+          <p><a href="https://xd.adobe.com/view/ab450fef-99b3-49a5-ad54-d65cdaf77520-fe16/">Interact with the prototype</a>.</p>
+          <p>Explore the design process by <a href="assets/documents/campus-safety.pdf">PDF</a>.</p>
+          <a href="assets/images/safety-feedback.png"><img src="assets/images/safety-feedback.png" class="d-none d-lg-block campus-feedback scroll-reveal box tag" alt="instructor's positive feedback"></a>
         </div>
         <div class="col-lg scroll-reveal box tag">
           <img src="assets/images/safety-sm.webp" class="mobile" alt="mobile design of the app's form page" >
