--- a/reflection.html
+++ b/reflection.html
@@ -13,6 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Zen+Kaku+Gothic+Antique:wght@300;400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/oyq2xai.css">
+<script src="https://kit.fontawesome.com/a3c5a6b02f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="primary">
@@ -69,6 +70,7 @@
                     <div class="google-slides-container">
                     <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
                     </div>
+                    <figcaption><a href="https://docs.google.com/presentation/d/1kWdnPn-7l2H6L-pppzJKWPxwVSgHgL9W9slFUvbgpBU/edit?usp=sharing"><i class="fa-solid fa-up-right-and-down-left-from-center"></i> Fullscreen Mode</a></figcaption>
                 </div>
               </div>
             </article>
