--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -43,6 +43,7 @@
           <h1>CAMPUS SAFTEY APP 2022</h1>
           <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus. A group collaborative project of CPSC 4379: Principles of UI & UX.</p>
           <p><a href="https://xd.adobe.com/view/ab450fef-99b3-49a5-ad54-d65cdaf77520-fe16/">Interact with the prototype</a>.</p>
+          <p><a href="assets/documents/safety-hifi.pdf">High Fidelity Design Image</a>.</p>
           <p>Explore the design process by <a href="assets/documents/campus-safety.pdf">PDF</a>.</p>
           <a href="assets/images/safety-feedback.png"><img src="assets/images/safety-feedback.png" class="d-none d-lg-block campus-feedback scroll-reveal box tag" alt="instructor's positive feedback"></a>
         </div>
