--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -50,6 +50,9 @@
               project. Later, my primary responsibility became mobile css development.</dd>
           </dl>
           <p><a href="buffalo-river/index.html" target="blank">Visit the site</a>.</p>
+          <p><a href="https://xd.adobe.com/view/d5c39cf2-f351-45f1-8170-6059c7e20f40-8090/">Interact with the prototype</a>.</p>
+          <p><a href="assets/documents/buffalo-wireframe.pdf">View the wireframe</a>.</p>
+          <p><a href="assets/documents/buffalo-lowfi.pdf">View the low fidelity design</a>.</p>
           <div class="wrap scroll-reveal box tag">
             <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
