--- a/web-university-district.html
+++ b/web-university-district.html
@@ -49,6 +49,8 @@
             <dd>As the UX developer, I was responsible for designing the website (and prototype) using UI/UX principles and for developing the wordpress layouts.</dd>
           </dl>
           <p><a href="https://web-projects.net/ud/" target="blank">Visit the site</a>.</p>
+          <p><a href="https://xd.adobe.com/view/257c069a-896c-42c0-beb7-5ff189cabd30-702f/">Interact with the prototype</a>.</p>
+          <p><a href="assets/documents/udp-wireframe.pdf">View the wireframe</a>.</p>
           <div class="wrap scroll-reveal box tag">
             <img src="assets/images/ud-heart.jpg" alt="hand holding a plastic heart">
           </div>
