--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="row about justify-content-between">
             <div class="col-lg-7">
             <h1>Hey, I'm Josephine.</h1>
-                <p>I'm a designer and I've recently graduated from the University of Arkansas at 
-                Little Rock (UALR) with a B.A. Web Design & Development (2022).</p>
+                <p>I'm a designer and will soon graduate from the University of Arkansas at 
+                Little Rock (UALR) with a B.A. Web Design & Development, Information Technology minor, & Digital Graphics minor (May 2023).</p>
                 <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
                 <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a> & <a href="assets/documents/cover-letter.pdf" 
                     target="blank">cover letter<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
