--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                         <dt>COLLABORATION TOOLS</dt>
                         <dd>Figma, Trello, Google Workspace</dd>
                             </dl>
+                        <dl>
+                        <dt>MORE</dt>
+                        <dd>Digital Design, Concepting, Public Speaking</dd>
+                            </dl>
                     </div>
                     <div class="col-md experience">  
                     <h2>COURSES & EXPERIENCE</h2>
