--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 <p>I'm a designer and recent graduate of the University of Arkansas at 
                 Little Rock (UALR) with a B.A. Web Design & Development, Information Technology minor, & Digital Arts minor (May 2023).</p>
                 <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
-                <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a> & <a href="assets/documents/cover-letter.pdf" 
-                    target="blank">cover letter<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
+                <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
                 <div class="row about-skills">
                     <div class="col-md skills">
                         <h2>SKILLS</h2>
