--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-lg-7">
             <h1>Hey, I'm Josephine.</h1>
                 <p>I'm a designer and recent graduate of the University of Arkansas at 
-                Little Rock (UALR) with a B.A. Web Design & Development, Information Technology minor, & Digital Arts minor (May 2023).</p>
+                Little Rock (UALR) with a B.A. Web Design & Development, Information Technology minor, & Digital Arts minor (May 2023) and M.A. in Mass Communication (May 2025).</p>
                 <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
                 <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
                 <div class="row about-skills">
@@ -50,7 +50,7 @@
                             </dl>
                             <dl>
                         <dt>ADOBE</dt>
-                        <dd>.xd .ai .ae .indd .psd .pr        </dd>
+                        <dd>.xd .ai .ae .indd .psd .pr</dd>
                             </dl>
                             <dl>
                         <dt>COLLABORATION TOOLS</dt>
@@ -68,10 +68,16 @@
                     <dd>Mobile Web Development IFSC 3342</dd>
                         </dl>
                         <dl>
+                    <dt>UALR (TRIumph Program) // 2024 - 2025</dt>
+                    <dd>Research Assistant
+                    <dd>Co-facilitated virtual and in-person workshops. Edited training videos and created digital 
+                        interactive workbooks and forms.</dd>
+
                     <dt>CARELINK // 2013 - 2019</dt>
                     <dd>Human Resource 2015 - 2019 // Receptionist 2013 - 2015</dd>
-                    <dd>Anticipated people's needs & converted those to beneficial actions for the company & employees.</dd>
-                        </dl>
+                    <dd>Managed employee benefits including health, 401k, workers compensation, and FMLA. Ensured 
+                        the company and employees adhered to Federal and State regulations.</dd>
+                        </dl> 
                     </div>
                 </div>
             </div>
