--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-lg-7">
             <h1>Hey, I'm Josephine.</h1>
                 <p>I'm a designer and recent graduate of the University of Arkansas at 
-                Little Rock (UALR) with a B.A. Web Design & Development and M.A. in Mass Communication.</p>
+                Little Rock (UALR) with a B.A. Web Design & Development and M.A. Mass Communication.</p>
                 <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
                 <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
                 <div class="row about-skills">
@@ -66,11 +66,16 @@
                         <dl>
                     <dt>UALR (TRIumph Program) // 2024 - 2025</dt>
                     <dd>Research Assistant
-                    <dd>Co-facilitated virtual and in-person workshops. Edited training videos and created digital 
-                        interactive workbooks and forms.</dd>
+                    <dd>Co-facilitated virtual and in-person workshops in public speaking and positive communication. 
+                        Edited training videos and created digital interactive workbooks and forms.</dd>
                         </dl>
                         
                         <dl>
+                    <dt>UALR (TRIumph Program) // 2024 - 2025</dt>
+                    <dd>Research Assistant
+                    <dd>Co-facilitated virtual and in-person workshops. Edited training videos and created digital 
+                        interactive workbooks and forms.</dd>
+
                     <dt>CARELINK // 2013 - 2019</dt>
                     <dd>Human Resource 2015 - 2019 // Receptionist 2013 - 2015</dd>
                     <dd>Managed employee benefits including health, 401k, workers compensation, and FMLA. Ensured 
