--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
                 </a>
             </div>
             <div class="col-md text-center scroll-reveal box tag">        
-                <a href="ux-campus-police.html">
+                <a href="triumph.html">
                     <svg id="poscom-svg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
   <circle cx="63.13" cy="240.48" r="1.36" fill="#fff"/>
   <g>
