--- a/triumph.html
+++ b/triumph.html
@@ -55,33 +55,40 @@
             <dd>As the research assistant to Dr. Julien Mirivel, I co-developed and co-facilitated the workshop sessions, including 
             <ul>
                 <li>Conception of the training content,</li>
-                <li>Developed materials such as graphic images, interactive training workbooks, presentation 
+                <li>Developed materials such as graphic designs, interactive training workbooks, presentation 
                 slides, and training videos,</li>
                 <li>Co-facilitated the in-person workshops</li>
                 <li>Tracked and measured TRIumph’s impact after each workshop session using pre- and 
                 post-training surveys and performance evaluations.</li>
             </ul>
+            Additionally, I developed graphic designs for the Positive Communication Network.
             </dd>
           </dl>
           <p><a href="https://tri.uams.edu/news/from-jitters-to-confidence-k12-scholars-learn-to-engage-real%E2%80%91world-audiences/"
              target="blank">Read the UAMS article here</a>.</p>
-            <p><a href="#guardianship"><em>Managing Public Speaking Anxiety</em></a>View one of the training videos for the program.</p>          
+            <p><a href="#guardianship"><em>Managing Public Speaking Anxiety</em></a>View one of the training 
+                videos for the program.</p>              
+          <p><a href="assets/documents/speaking-positively-workbook.pdf">View the Session I Workbook</a>.</p>
           <div class="wrap scroll-reveal box tag">
-            <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
+            <img src="assets/images/building-leadership-resilience.jpg" alt="a model of Dr. Julien Mirivels framework for
+            building reslience through positive communication. ">
+            <img src="assets/images/poscom-network-event.png" alt="a model of Dr. Julien Mirivels framework for
+            building reslience through positive communication. ">
           </div>
         </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/mobile-buffalo.gif" class="mobile" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
+          <img src="assets/images/workbook.jpg" class="mobile" alt="workbook coverpage titled speaking positively,
+          inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
       </div>
     </article>
 
-    <!--VIDEO OF CAUSE THAT'S WHAT I DO-->
+    <!--VIDEO OF Managing Anxiety-->
       <article class="article-2">
         <div class="row">
           <div class="col">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe id="cause" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/6GWVHu-B-M0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
+              <iframe id="cause" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/MUWIUgozSvY?si=Ms8bWH6c1MGZfMYd" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
             </div>
           </div>
       </div>
